<resources>
    <string name="app_name">SAK test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_09_30">09:30</string>
    <string name="_09_45">09:45</string>
    <string name="_10_15">10:15</string>
    <string name="_10_00">10:00</string>
    <string name="_09_15">09:15</string>
    <string name="_09_00">09:00</string>
    <string name="_08_45">08:45</string>
    <string name="_08_30">08:30</string>
    <string name="_08_15">08:15</string>
    <string name="_08_00">08:00</string>
    <string name="_07_45">07:45</string>
    <string name="_07_30">07:30</string>
    <string name="_07_15">07:15</string>
    <string name="_07_00">07:00</string>
    <string name="agenda_to_clok">agenda to clok</string>
    <string name="klok_naar_kompas">klok naar kompas</string>
    <string name="klok_naar_agenda">klok naar agenda</string>
    <string name="klok_naar_klok">klok naar klok</string>
    <string name="klok_naar_rekenmachine">klok naar rekenmachine</string>
    <string name="klok">Klok</string>
    <string name="grote_kaart">grote kaart</string>
    <string name="result">Result:</string>
    <string name="enter_number_1">Enter number 1</string>
    <string name="enter_number_2">Enter number 2</string>
    <string name="delen">/</string>
    <string name="x">x</string>
    <string name="min">-</string>
    <string name="plus">+</string>
    <string name="resultaat">result</string>
</resources>