<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#808080"
    android:backgroundTint="#808080"
    tools:context=".rekenmachine" >

    <HorizontalScrollView
        android:id="@+id/bovenbalk"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_weight="0.15"
        android:fillViewport="true"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        app:layout_constraintBottom_toTopOf="@+id/de_spatie_boven"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/topbar"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginVertical="-12dp"
            android:background="@color/black"
            android:divider="?android:attr/dividerHorizontal"
            android:orientation="horizontal"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:showDividers="middle"
            app:layout_constraintBottom_toTopOf="@id/de_rekenmachine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />

            <ImageButton
                android:id="@+id/rekenmachine_to_agenda"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_weight="0.25"
                android:contentDescription="@string/klok_naar_agenda"
                android:scaleType="fitXY"
                android:src="@drawable/agenda"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="227dp" />

            <Space
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />

            <ImageButton
                android:id="@+id/rekenmachine_to_kompas"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_weight="0.100"
                android:contentDescription="@string/klok_naar_kompas"
                android:scaleType="fitXY"
                android:src="@drawable/kompas"
                tools:layout_editor_absoluteX="142dp"
                tools:layout_editor_absoluteY="268dp" />

            <Space
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />

            <ImageButton
                android:id="@+id/rekenmachine_to_clock"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_weight="0.100"
                android:contentDescription="@string/klok_naar_klok"
                android:scaleType="fitXY"
                android:src="@drawable/clock"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="262dp" />

            <Space
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />

            <ImageButton
                android:id="@+id/rekenmachine_to_rekenmachine"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_weight="0.100"
                android:contentDescription="@string/klok_naar_rekenmachine"
                android:scaleType="fitXY"
                android:src="@drawable/calculator_icon_vector_savings_finances_260nw_1703347114"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="262dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </HorizontalScrollView>

    <Space
        android:id="@+id/de_spatie_boven"
        android:layout_width="13dp"
        android:layout_height="27dp"
        android:layout_marginEnd="411dp"
        app:layout_constraintBottom_toTopOf="@id/de_rekenmachine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bovenbalk" />

    <LinearLayout
        android:id="@+id/de_rekenmachine"
        android:layout_width="0dp"
        android:layout_height="660dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bovenbalk">

        <EditText
            android:id="@+id/num1EditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="44dp"
            android:hint="@string/enter_number_1"
            android:inputType="numberDecimal"
            android:autofillHints="0" />

        <EditText
            android:id="@+id/num2EditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:hint="@string/enter_number_2"
            android:inputType="numberDecimal"
            android:autofillHints="1" />

        <Button
            android:id="@+id/divideButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/delen"
            android:textSize="16sp" />

        <Button
            android:id="@+id/multiplyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/x"
            android:textSize="16sp" />

        <Button
            android:id="@+id/subtractButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/min"
            android:textSize="16sp" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/plus"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="40dp"
            android:text="@string/resultaat"
            android:textSize="18sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>







